RESOLVED FIXED311515
Fix bug and minor inefficiencies in HTMLDocumentParser and HTMLPreloadScanner
https://bugs.webkit.org/show_bug.cgi?id=311515
Summary Fix bug and minor inefficiencies in HTMLDocumentParser and HTMLPreloadScanner
Chris Dumez
Reported 2026-04-05 02:24:07 PDT
Fix bug and minor inefficiencies in HTMLDocumentParser and HTMLPreloadScanner.
Attachments
Chris Dumez
Comment 1 2026-04-05 02:25:46 PDT
EWS
Comment 2 2026-04-05 17:33:04 PDT
Committed 310616@main (64f9ac8efe9d): <https://commits.webkit.org/310616@main> Reviewed commits have been landed. Closing PR #62070 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-05 17:34:11 PDT
Note You need to log in before you can comment on or make changes to this bug.