Fix bug and minor inefficiencies in HTMLDocumentParser and HTMLPreloadScanner https://bugs.webkit.org/show_bug.cgi?id=311515

Reviewed by Anne van Kesteren.

- Fix dead code in TokenPreloadScanner::StartTagScanner::processAttribute() where the
  m_metaIsDisabledAdaptations branch was unreachable because it checked the same nameAttr
  condition as the preceding else-if branch. This meant <meta name="disabled-adaptations">
  was never processed during preload scanning.

- Remove unnecessary isolatedCopy() in TokenPreloadScanner::updatePredictedBaseURL(). The
  URL is a local variable used only on the main thread, so a move suffices. Also check
  isValid() before checking the base URL scheme restriction, since an invalid URL should
  not be assigned regardless.

- Cache the frame pointer before the token loop in HTMLDocumentParser::pumpTokenizerLoop()
  to avoid repeated document()->frame() lookups and the per-token protect() call on the
  NavigationScheduler. The RefPtr keeps the frame alive for the duration of the loop.

* Source/WebCore/html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::pumpTokenizerLoop):
* Source/WebCore/html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttribute):
(WebCore::TokenPreloadScanner::updatePredictedBaseURL):

Canonical link: https://commits.webkit.org/310616@main